log/build_2026-02-10_17-56-07/mobile_robot/stderr.log
  File "/home/russe/Autonomous_Robot/install/mobile_robot/lib/python3.12/site-packages/mobile_robot/simple_avoid_obstacle.py", line 70
    return
    ^^^^^^
SyntaxError: 'return' outside function

